Added comments section with submit option

--- a/frontend/src/app/features/posts/posts-details/posts-details.html
+++ b/frontend/src/app/features/posts/posts-details/posts-details.html
@@ -42,5 +42,7 @@
             }
         </mat-card-actions>
     </mat-card>
+
+    <app-comments-details [postId]="post.id"></app-comments-details>
    }
 </div>
