--- a/frontend/src/app/features/comments/comments-details/comments-details.html
+++ b/frontend/src/app/features/comments/comments-details/comments-details.html
@@ -1,21 +1,20 @@
 <div class="comments-container">
-
   <!-- Comments Header -->
   <h3 class="section-title">Comments</h3>
   <app-comments-form [postId]="postId" (commentAdded)="loadComments()"></app-comments-form>
 
   <!-- Comment List -->
   @for (c of comments; track c) {
-    <mat-card class="comment-card" appearance="outlined">
-      <mat-card-header>
-        <div mat-card-avatar class="avatar"></div>
-        <mat-card-title>{{ c.authorDisplayName }}</mat-card-title>
-        <mat-card-subtitle>{{ c.createdAt | date: 'medium' }}</mat-card-subtitle>
-      </mat-card-header>
+  <mat-card class="comment-card" appearance="outlined">
+    <mat-card-header>
+      <img [src]="c.authorAvatarUrl" mat-card-avatar color="primary" />
+      <mat-card-title>{{ c.authorDisplayName }}</mat-card-title>
+      <mat-card-subtitle>{{ c.createdAt | date : 'medium' }}</mat-card-subtitle>
+    </mat-card-header>
 
-      <mat-card-content>
-        <p>{{ c.content }}</p>
-      </mat-card-content>
-    </mat-card>
+    <mat-card-content>
+      <p>{{ c.content }}</p>
+    </mat-card-content>
+  </mat-card>
   }
 </div>
