--- a/frontend/src/app/features/posts/posts-list/posts-list.html
+++ b/frontend/src/app/features/posts/posts-list/posts-list.html
@@ -48,6 +48,11 @@
 
       }
     </mat-list>
+    <mat-paginator
+      [length]="totalCount"
+      [pageSize]="pageSize"
+      (page)="onPageChange($event)"
+    ></mat-paginator>
     }
   </div>
 </div>
