--- a/frontend/src/app/features/posts/posts-form/posts-form.html
+++ b/frontend/src/app/features/posts/posts-form/posts-form.html
@@ -2,28 +2,32 @@
   <mat-card-title>Add New Post</mat-card-title>
 
   <form [formGroup]="postForm" #formDir="ngForm" (ngSubmit)="onSubmit()" class="form-content">
-
     <!-- Title -->
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Title</mat-label>
       <input matInput formControlName="title" placeholder="Enter title" />
       @if (postForm.get('title')?.hasError('required')){
-        <mat-error>Title is required</mat-error>
-      }
-      @if (postForm.get('title')?.hasError('minlength')){
-        <mat-error>Minimum 3 characters</mat-error>
+      <mat-error>Title is required</mat-error>
+      } @if (postForm.get('title')?.hasError('minlength')){
+      <mat-error>Minimum 3 characters</mat-error>
       }
     </mat-form-field>
 
     <!-- Description -->
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Description</mat-label>
-      <textarea matInput rows="4" formControlName="description" placeholder="Write your post..."></textarea>
+      <textarea
+        matInput
+        rows="4"
+        formControlName="description"
+        placeholder="Write your post..."
+      ></textarea>
       @if (postForm.get('description')?.hasError('required')){
-        <mat-error>Description is required</mat-error>
-      }
-      @if (postForm.get('description')?.hasError('minlength')){
-        <mat-error>Minimum 10 characters</mat-error>
+      <mat-error>Description is required</mat-error>
+      } @if (postForm.get('description')?.hasError('minlength')){
+      <mat-error>Minimum 10 characters</mat-error>
+      } @if (postForm.get('description')?.hasError('maxlength')){
+      <mat-error>Maxiumum 1000 characters</mat-error>
       }
     </mat-form-field>
 
@@ -35,7 +39,7 @@
         <mat-option *ngFor="let type of postTypes" [value]="type">{{ type }}</mat-option>
       </mat-select>
       @if (postForm.get('type')?.hasError('required')){
-        <mat-error>Type is required</mat-error>
+      <mat-error>Type is required</mat-error>
       }
     </mat-form-field>
 
@@ -54,17 +58,16 @@
         </button>
       </mat-form-field>
 
-    <mat-chip-listbox aria-label="Tags" class="tag-list">
-    @for (tag of tags.controls; track tag; let i = $index){
-    <mat-chip (removed)="removeTag(i)">
-        {{ tag.value }}
-        <button matChipRemove>
-        <mat-icon>close</mat-icon>
-        </button>
-    </mat-chip>
-    }
-
-    </mat-chip-listbox>
+      <mat-chip-listbox aria-label="Tags" class="tag-list">
+        @for (tag of tags.controls; track tag; let i = $index){
+        <mat-chip (removed)="removeTag(i)">
+          {{ tag.value }}
+          <button matChipRemove>
+            <mat-icon>close</mat-icon>
+          </button>
+        </mat-chip>
+        }
+      </mat-chip-listbox>
     </div>
 
     <button
@@ -77,6 +80,6 @@
     </button>
   </form>
   @if (message){
-    <mat-hint class="status-message">{{ message }}</mat-hint>
+  <mat-hint class="status-message">{{ message }}</mat-hint>
   }
 </mat-card>
