Tags as objects added. Refactoring frontend.

--- a/frontend/src/app/features/posts/posts-details/posts-details.html
+++ b/frontend/src/app/features/posts/posts-details/posts-details.html
@@ -35,7 +35,7 @@
       <div class="tags">
         @for (tag of post.tags; track tag){
         <mat-chip-listbox>
-          <mat-chip color="primary" selected>{{ tag }}</mat-chip>
+          <mat-chip color="primary" selected>{{ tag.name }}</mat-chip>
         </mat-chip-listbox>
         }
       </div>
