--- a/frontend/src/app/features/posts/posts-details/posts-details.html
+++ b/frontend/src/app/features/posts/posts-details/posts-details.html
@@ -26,7 +26,7 @@
         >
           {{ post.authorDisplayName }}</a
         >
-        • {{ post.createdAt | date : 'medium' }}
+        • {{ post.createdAt | date : 'short' }}
       </mat-card-subtitle>
     </mat-card-header>
 
