Added update profiel feature

--- a/frontend/src/app/features/user/profile/profile.html
+++ b/frontend/src/app/features/user/profile/profile.html
@@ -17,39 +17,54 @@
   <mat-divider></mat-divider>
 
   <mat-card-content class="profile-content">
-    <div class="profile-row">
-      <mat-icon>email</mat-icon>
-      <span>{{ profile.email }}</span>
+    <!-- Contact Info -->
+    <div class="section">
+      <h3 class="section-title">Contact Info</h3>
+      <div class="profile-row">
+        <mat-icon>email</mat-icon>
+        <span>{{ profile.email }}</span>
+      </div>
     </div>
 
-    <div class="profile-row">
-      <mat-icon>code</mat-icon>
-      <span class="skills">
-        @for( skill of profile.skills; track skill.id){
-        <span class="skill">
-          {{ skill.name }}
+    <!-- Skills -->
+    @if(profile.skills.length > 0) {
+    <div class="section">
+      <h3 class="section-title">Skills</h3>
+      <div class="profile-row">
+        <mat-icon>code</mat-icon>
+        <span class="skills">
+          @for(skill of profile.skills; track skill.id) {
+          <span class="skill">{{ skill.name }}</span>
+          }
         </span>
-        }
-      </span>
+      </div>
     </div>
+    }
 
-    <div class="social-links">
-      @if(profile.githubUrl) {
-      <a [href]="profile.githubUrl" target="_blank" class="social-item github">
-        <img src="icons/github_logo.png" alt="GitHub" />
-        GitHub
-      </a>
-      } @if(profile.linkedinUrl) {
-      <a [href]="profile.linkedinUrl" target="_blank" class="social-item linkedin">
-        <img src="icons/linkedin_logo.png" alt="LinkedIn" />
-        LinkedIn
-      </a>
-      }
+    <!-- Social Links -->
+    @if(profile.githubUrl || profile.linkedinUrl){
+    <div class="section">
+      <h3 class="section-title">Social Links</h3>
+      <div class="social-links">
+        @if(profile.githubUrl) {
+        <a [href]="profile.githubUrl" target="_blank" class="social-item github">
+          <img src="icons/github_logo.png" alt="GitHub" />
+          GitHub
+        </a>
+        } @if(profile.linkedinUrl) {
+        <a [href]="profile.linkedinUrl" target="_blank" class="social-item linkedin">
+          <img src="icons/linkedin_logo.png" alt="LinkedIn" />
+          LinkedIn
+        </a>
+        }
+      </div>
     </div>
+    }
   </mat-card-content>
 
   <mat-card-actions>
-    <button mat-raised-button color="primary" routerLink="/profile/edit">Edit Profile</button>
+    <button mat-raised-button color="primary" [routerLink]="['/user/me/edit']">Edit Profile</button>
   </mat-card-actions>
+
   }
 </mat-card>
