Filter added, some UI changes, cleanup

--- a/frontend/src/app/features/posts/posts-form/posts-form.html
+++ b/frontend/src/app/features/posts/posts-form/posts-form.html
@@ -27,7 +27,7 @@
       } @if (postForm.get('description')?.hasError('minlength')){
       <mat-error>Minimum 10 characters</mat-error>
       } @if (postForm.get('description')?.hasError('maxlength')){
-      <mat-error>Maxiumum 1000 characters</mat-error>
+      <mat-error>Maximum 1000 characters</mat-error>
       }
     </mat-form-field>
 
