--- a/frontend/src/app/features/comments/comments-details/comments-details.html
+++ b/frontend/src/app/features/comments/comments-details/comments-details.html
@@ -1,22 +1,31 @@
 <div class="comments-container">
-  <!-- Comments Header -->
-  <h3 class="section-title">Comments</h3>
+  <!-- Comment Form -->
   <app-comments-form [postId]="postId" (commentAdded)="loadComments()"></app-comments-form>
 
   <!-- Comment List -->
-  @for (c of comments; track c) {
-  <mat-card class="comment-card" appearance="outlined">
-    <mat-card-header>
-      <img [src]="c.authorAvatarUrl" mat-card-avatar color="primary" />
-      <mat-card-title>
-        <a [routerLink]="['/user', c.authorId]" class="author-link"> {{ c.authorDisplayName }}</a>
-      </mat-card-title>
-      <mat-card-subtitle>{{ c.createdAt | date : 'short' }}</mat-card-subtitle>
-    </mat-card-header>
+  <h3 class="section-title">Comments</h3>
 
-    <mat-card-content>
-      <p>{{ c.content }}</p>
-    </mat-card-content>
-  </mat-card>
-  }
+  <div class="comment-list">
+    @for (c of comments; track c) {
+    <mat-card class="comment-card" appearance="outlined">
+      <!-- Comment Header -->
+      <div class="comment-header">
+        <div class="comment-author">
+          <div class="avatar-wrapper">
+            <img [src]="c.authorAvatarUrl" alt="Avatar" class="avatar" />
+          </div>
+          <a [routerLink]="['/user', c.authorId]" class="author-link">
+            {{ c.authorDisplayName }}
+          </a>
+        </div>
+        <span class="comment-date">{{ c.createdAt | date : 'short' }}</span>
+      </div>
+
+      <!-- Comment Content -->
+      <div class="comment-content">
+        <p>{{ c.content }}</p>
+      </div>
+    </mat-card>
+    }
+  </div>
 </div>
