--- a/frontend/src/app/features/comments/comments-form/comments-form.html
+++ b/frontend/src/app/features/comments/comments-form/comments-form.html
@@ -3,40 +3,33 @@
 
 <mat-card class="add-comment-card" appearance="outlined">
   <mat-card-content>
-
     <form [formGroup]="commentForm" #formDir="ngForm">
-
       <mat-form-field appearance="outline" class="full-width">
         <mat-label>Your comment</mat-label>
         <textarea
           matInput
-          maxlength="255"
+          maxlength="1000"
           formControlName="content"
           rows="3"
-          placeholder="Write a comment...">
+          placeholder="Write a comment..."
+        >
         </textarea>
 
         @if(commentForm.get('content')?.hasError('required')){
-            <mat-error>
-            Comment cannot be empty.
-            </mat-error>
+        <mat-error> Comment cannot be empty. </mat-error>
+        } @if(commentForm.get('content')?.hasError('maxlength')){
+        <mat-error> Comment is too long (max 1000 chars). </mat-error>
         }
-        @if(commentForm.get('content')?.hasError('maxlength')){
-            <mat-error>
-            Comment is too long (max 255 chars).
-            </mat-error>
-        }
-        </mat-form-field>
+      </mat-form-field>
 
       <button
         mat-raised-button
         color="primary"
         (click)="submitComment()"
-        [disabled]="commentForm.invalid">
+        [disabled]="commentForm.invalid"
+      >
         Add Comment
       </button>
-
     </form>
-
   </mat-card-content>
 </mat-card>
