--- a/frontend/src/app/features/posts/posts-list/posts-list.scss
+++ b/frontend/src/app/features/posts/posts-list/posts-list.scss
@@ -59,7 +59,7 @@
 .posts-list {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 8px;
 }
 
 /* POST ITEM */
@@ -75,7 +75,7 @@
 }
 
 .post-item:hover {
-  background-color: #f5f5f5;
+  background-color: #e9e9e9;
 }
 
 /* Avatar */
@@ -104,14 +104,36 @@
   color: #222;
 }
 
+/* Wrapper for description + read more */
+.post-content-wrapper {
+  // max-height: 8.2em; /* ~3 lines */
+  overflow: hidden;
+  position: relative;
+}
+
 /* Description */
 .post-content {
   font-size: 0.95rem;
   color: #555;
-  margin-bottom: 8px;
   line-height: 1.4;
   word-break: break-word;
+
+  display: -webkit-box;
+  line-clamp: 3;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
+
+/* Read more hint */
+.read-more {
+  position: block;
+  padding: 12px 0;
+  font-size: 0.85rem;
+  font-weight: 500;
+  color: #1976d2;
+}
+
 
 /* Info: status/type/tags */
 .post-info {
