--- a/frontend/src/app/shared/components/layout/navbar/navbar.scss
+++ b/frontend/src/app/shared/components/layout/navbar/navbar.scss
@@ -36,7 +36,7 @@
     }
 
     &:hover {
-      background-color: rgba(255, 255, 255, 0.1);
+      background-color: #e9e9e9;
       border-radius: 6px;
     }
   }
