Fixed edit button showing on all profiles Added JWT id retrieve method

--- a/frontend/src/app/features/user/profile/profile.html
+++ b/frontend/src/app/features/user/profile/profile.html
@@ -14,11 +14,13 @@
     </div>
 
     <!-- Edit button on the right -->
+    @if (isMyProfile()) {
     <div class="header-actions">
       <button mat-raised-button color="primary" [routerLink]="['/user/me/edit']">
         Edit Profile
       </button>
     </div>
+    }
   </div>
 
   <mat-divider></mat-divider>
