--- a/frontend/src/app/shared/components/layout/navbar/navbar.html
+++ b/frontend/src/app/shared/components/layout/navbar/navbar.html
@@ -1,24 +1,27 @@
 <mat-toolbar color="primary" class="navbar">
-    <img routerLink="/" src="logo.png" alt="Logo" class="logo">
+  <img routerLink="/" src="logo.png" alt="Logo" class="logo" />
+  <div class="name">
+    <h1>SkillSwap</h1>
+  </div>
   <span class="spacer"></span>
 
-    <!-- Dynamic Links -->
-    <ng-container>
-        @for(link of links(); track link){
-            <button mat-button [routerLink]="link.routerLink">
-            <mat-icon>{{ link.icon }}</mat-icon>
-            {{ link.label }}
-            </button>
-        }
-    </ng-container>
-
-    <!-- Logged-in section -->
-    @if(authService._isLoggedIn()){
-        <ng-container>
-                    <button mat-button (click)="authService.logout()">
-                        <mat-icon>logout</mat-icon>
-                        Logout
-                    </button>
-        </ng-container>
+  <!-- Dynamic Links -->
+  <ng-container>
+    @for(link of links(); track link){
+    <button mat-button [routerLink]="link.routerLink">
+      <mat-icon>{{ link.icon }}</mat-icon>
+      {{ link.label }}
+    </button>
     }
+  </ng-container>
+
+  <!-- Logged-in section -->
+  @if(authService._isLoggedIn()){
+  <ng-container>
+    <button mat-button (click)="authService.logout()">
+      <mat-icon>logout</mat-icon>
+      Logout
+    </button>
+  </ng-container>
+  }
 </mat-toolbar>
