--- a/frontend/src/app/features/comments/comments-details/comments-details.scss
+++ b/frontend/src/app/features/comments/comments-details/comments-details.scss
@@ -76,3 +76,12 @@
   color: #444;
   text-align: justify;
 }
+
+.closed-info {
+  background: #ffcece;
+  color: #d50000;
+  margin-bottom: 16px;
+  padding: 12px;
+  border-radius: 8px;
+  font-weight: 500;
+}
