--- a/frontend/src/app/shared/components/layout/navbar/navbar.html
+++ b/frontend/src/app/shared/components/layout/navbar/navbar.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" class="navbar">
   <img routerLink="/" src="logo.png" alt="Logo" class="logo" />
-  <div class="name">
-    <h1>SkillSwap</h1>
+  <div routerLink="/" class="name">
+    <h1>devCircle</h1>
   </div>
   <span class="spacer"></span>
 
