--- a/frontend/src/app/shared/components/layout/navbar/navbar.scss
+++ b/frontend/src/app/shared/components/layout/navbar/navbar.scss
@@ -8,8 +8,28 @@
   top: 0;
   z-index: 1000;
 
+  .name {
+    margin-left: 0.75rem;
+    display: flex;
+    align-items: center;
+  }
+
+  .name h1 {
+    font-size: 1.8rem;
+    font-weight: bold;
+    margin: 0;
+    color: #313ed3;
+    letter-spacing: 1px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-shadow: 0 1px 3px rgba(0,0,0,0.25);
+  }
+  .name, .logo {
+    cursor: pointer;
+  }
+
+
   .logo {
-    height: 40px;
+    height: 48px;
     width: auto;
     cursor: pointer;
     transition: transform 2s ease;
@@ -80,18 +100,5 @@
   }
 }
 
-.name {
-  margin-left: 0.75rem;
-  display: flex;
-  align-items: center;
-}
 
-.name h1 {
-  font-size: 1.8rem;
-  font-weight: bold;
-  margin: 0;
-  color: #313ed3;
-  letter-spacing: 2px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
-}
 
